# GrakX

./: .gitignore  README.md  config.py  main.py  post_class.py  pyproject.toml
api/: __init__.py  post_class.py  set_session.py
get_class/: __init__.py  filter.py  xsxk.py
session/: __init__.py  course.py  ocr.py  session.py
