[project]
name = "mathx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.31.0",
    "opencv-python>=4.9.0",
    "Pillow>=10.0.0",
    "beautifulsoup4>=4.10.0",
    "ddddocr>=1.5.0"
]
packages = [
    "session",
    "get_class"
]
